@@ -103,8 +103,8 @@ OP_HPUpdate=0x07b8
 OP_ManaChange=0x1e3b
 OP_TGB=0x10a6
 OP_SpecialMesg=0x362c
-#OP_GuildMemberList=0x4053
-#OP_GuildMOTD=0x0561
+OP_GuildMemberList=0x4053
+OP_GuildMOTD=0x0561
 OP_CharInventory=0x786e
 OP_WearChange=0x1ad3
 OP_ClientUpdate=0x455d
@@ -112,33 +112,33 @@ OP_ClientReady=0x3f83				# 0x422d
 OP_SetServerFilter=0x5b27
 
 # Guild Opcodes - Disabled until crashes are resolved in RoF
-#OP_GetGuildMOTD=0x35dc
-#OP_GetGuildMOTDReply=0x4586
-#OP_GuildMemberUpdate=0x5643
-#OP_GuildInvite=0x5f8e
-#OP_GuildRemove=0x296d
-#OP_GuildPeace=0x17eb
-#OP_SetGuildMOTD=0x44d0
-#OP_GuildList=0x2d38
-#OP_GuildWar=0x395a
-#OP_GuildLeader=0x7c6f
-#OP_GuildDelete=0x241b
-#OP_GuildInviteAccept=0x78a5
-#OP_GuildDemote=0x3100
-#OP_GuildPublicNote=0x3c2c
-#OP_GuildManageBanker=0x0737
-#OP_GuildBank=0x10c3
-#OP_SetGuildRank=0x3599
-#OP_GuildUpdateURLAndChannel=0x7851
-#OP_GuildStatus=0x25a5
-#OP_GuildCreate=0xd2d1				# or maybe 0x086e
-#OP_GuildMemberLevelUpdate=0x0000	# Unused?
-#OP_ZoneGuildList=0x0000			# Unused?
-#OP_GetGuildsList=0x0000			# Unused?
-#OP_LFGuild=0x0000
-#OP_GuildManageRemove=0x0000
-#OP_GuildManageAdd=0x0000
-#OP_GuildManageStatus=0x0000
+OP_GetGuildMOTD=0x35dc
+OP_GetGuildMOTDReply=0x4586
+OP_GuildMemberUpdate=0x5643
+OP_GuildInvite=0x5f8e
+OP_GuildRemove=0x296d
+OP_GuildPeace=0x17eb
+OP_SetGuildMOTD=0x44d0
+OP_GuildList=0x2d38
+OP_GuildWar=0x395a
+OP_GuildLeader=0x7c6f
+OP_GuildDelete=0x241b
+OP_GuildInviteAccept=0x78a5
+OP_GuildDemote=0x3100
+OP_GuildPublicNote=0x3c2c
+OP_GuildManageBanker=0x0737
+OP_GuildBank=0x10c3
+OP_SetGuildRank=0x3599
+OP_GuildUpdateURLAndChannel=0x7851
+OP_GuildStatus=0x25a5
+OP_GuildCreate=0xd2d1				# or maybe 0x086e
+OP_GuildMemberLevelUpdate=0x0000	# Unused?
+OP_ZoneGuildList=0x0000				# Unused?
+OP_GetGuildsList=0x0000				# Unused?
+OP_LFGuild=0x0000
+OP_GuildManageRemove=0x0000
+OP_GuildManageAdd=0x0000
+OP_GuildManageStatus=0x0000
 
 # GM/guide opcodes
 OP_GMServers=0x2612
